20. Final Mega Capstone Project/projects/34-standard-multistack-deployment/k8s/base/service.yaml
{
  "apiVersion": "v1",
  "kind": "Service",
  "metadata": {
    "name": "deployment-demo"
  },
  "spec": {
    "type": "ClusterIP",
    "selector": {
      "app.kubernetes.io/name": "deployment-demo"
    },
    "ports": [
      {
        "port": 80,
        "targetPort": "http",
        "name": "http"
      }
    ]
  }
}
