20. Final Mega Capstone Project/projects/34-standard-multistack-deployment/k8s/base/network-policy.yaml
{
  "apiVersion": "networking.k8s.io/v1",
  "kind": "NetworkPolicy",
  "metadata": {
    "name": "deployment-demo"
  },
  "spec": {
    "podSelector": {
      "matchLabels": {
        "app.kubernetes.io/name": "deployment-demo"
      }
    },
    "policyTypes": [
      "Ingress",
      "Egress"
    ],
    "ingress": [
      {
        "from": [
          {
            "podSelector": {}
          },
          {
            "namespaceSelector": {
              "matchLabels": {
                  "kubernetes.io/metadata.name": "gateway-system"
              }
            }
          }
        ],
        "ports": [
          {
            "protocol": "TCP",
            "port": 8080
          }
        ]
      }
    ],
    "egress": []
  }
}
